simplify llama probing